<resources>
    <string name="app_name">AndroidShopingApp</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_social">Or sign up with social account</string>
    <string name="login">Login</string>
    <string name="forgot_password_q">Forgot your password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="log_in_social">Or login with social account</string>
    <string name="forgot_password_message">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="send">send</string>
    <string name="name_error">Name must be at least 4 characters long</string>
    <string name="email_error">Invalid Email format</string>
    <string name="password_error">Password must be at least 4 characters long and must contain at least 1 digit</string>
    <string name="check">Check</string>
    <string name="fashion_sale">Fashion sale</string>
    <string name="view_all">View all</string>
    <string name="price_strike"><strike> 15$ </strike></string>
    <string name="price">12$</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="star_rating">(10)</string>
    <string name="new_product">NEW</string>
    <string name="register_error">Can\'t register</string>
    <string name="login_error">Can\'t log in</string>
    <string name="error_fetching">Error fetching data</string>
    <string name="banner_click">Banner click</string>
    <string name="carousel_click">Carousel click %1$s </string>
    <string name="product_click">Product click %1$s </string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="new_collection">New collection</string>
    <string name="men_hoodies">Men\'s hoodies</string>
    <string name="black">Black</string>
    <string name="summer_sale">Summer sale</string>
    <string name="never_seen">You\'ve never seen it before!</string>
    <string name="kids_sale">Kids summer sales!</string>
    <string name="sale_amount">Up to 50% off</string>
    <string name="men_sale">Men Summer Sales!</string>
    <string name="women_sale">Women Summer Sales!</string>
    <string name="price_lowest_to_highest">Price: lowest to highest</string>
    <string name="filter">Filter</string>
    <string name="crop_tops">Crop tops</string>
    <string name="sort_by">Sort by</string>
    <string name="price_highest_to_lowest">Price: highest to lowest</string>
    <string name="rating_lowest_to_highest">Rating: lowest to highest</string>
    <string name="rating_highest_to_lowest">Rating: highest to lowest</string>
    <string name="price_range">Price range</string>
    <string name="colors">Colors</string>
    <string name="color">Color</string>
    <string name="sizes">Sizes</string>
    <string name="size">Size</string>
    <string name="category">Category</string>
    <string name="discard">Discard</string>
    <string name="apply">Apply</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="shipping_info">Shipping info</string>
    <string name="support">Support</string>
    <string name="you_can_also_like_this">You can also like this</string>
    <string name="select_size">Select size</string>
    <string name="size_info">Size info</string>
    <string name="select_color">Select color</string>
    <string name="color_info">Color info</string>
    <string name="my_bag">My Bag</string>
    <string name="total_amount">Total amount:</string>
    <string name="check_out">Check out</string>
    <string name="bag_color">Color: &lt;font color="#000000"> %1$s &lt;/font> </string>
    <string name="bag_size">Size: &lt;font color="#000000"> %1$s &lt;/font> </string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="delete_from_the_list">Delete from the list</string>
    <string name="cart_success">Successfully added to cart!</string>
    <string name="cart_fail">Adding to cart failed!</string>
    <string name="rating_reviews">Rating and reviews</string>
    <string name="helpful">Helpful</string>
    <string name="with_photo">With photo</string>
    <string name="write_a_review">Write a review</string>
    <string name="rating_and_reviews">Rating and Reviews</string>
    <string name="what_is_your_rating">What is your rating?</string>
    <string name="share_opinion">Please share your opinion about the product</string>
    <string name="your_review">Your review</string>
    <string name="send_review">Send review</string>
    <string name="add_your_photos">Add your photos</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_gallery">Choose from gallery</string>
    <string name="add_photos">Add photos</string>
    <string name="permission_denied">Please give consent to this permission if you want to use this feature</string>
    <string name="favorites">Favorites</string>
    <string name="error_deleting">Error deleting from db</string>
    <string name="remove_from_favorites">Remove from favorites</string>
</resources>