<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.gd.intership.hdziedziura.androidshopingapp.presentation.viewmodels.ForgotPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_28">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotText"
                android:text="@string/forgot_password"
                style="@style/TextLoginTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_44"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotText">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_message"
                    android:textSize="@dimen/sp_7" />

                <com.gd.intership.hdziedziura.androidshopingapp.presentation.ui.views.TextInputLayout
                    android:id="@+id/user_email_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_32"
                        android:afterTextChanged="@{() -> vm.validateEmail()}"
                        android:text="@={vm.email}"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>

                </com.gd.intership.hdziedziura.androidshopingapp.presentation.ui.views.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_24"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_35"
                android:text="@string/send"
                android:onClick="@{() -> vm.onSendClick()}"
                style="@style/ButtonLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_inputs" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>