<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.gd.intership.hdziedziura.androidshopingapp.presentation.viewmodels.bag.BagViewModel" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            style="@style/TextLoginTitle"
            android:text="@string/my_bag"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_bag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            rvItems="@{vm.data}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="@dimen/sp_7"
                android:text="@string/total_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_8"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/sp_9"
                android:text='@{vm.totalAmount+"$"}'
                tools:text="124$"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_12"
            style="@style/ButtonLogin"
            android:text="@string/check_out"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginHorizontal="@dimen/dp_8"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>