<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.gd.intership.hdziedziura.androidshopingapp.presentation.viewmodels.home.HomeViewModel" />

    </data>

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_dialog"
        app:behavior_peekHeight="350dp"
        android:backgroundTint="@color/background"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:layout_gravity="center"
                android:src="@drawable/bottom_sheet_bar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/select_size"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_9"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_7"
                android:layout_gravity="center_horizontal"
                app:rvItems="@{vm.sizes}"
                android:nestedScrollingEnabled="false"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_height="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/size_info"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textAlignment="viewStart"
                app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:iconTint="@color/black"
                app:iconGravity="end" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

<!--                android:onClick="@{() -> vm.onAddToFavoriteClick()}"-->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_24"
                style="@style/ButtonLogin"
                android:text="@string/add_to_favorites"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_marginHorizontal="@dimen/dp_8"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>